Remove Usage of List.of (incompatible with Java 8) (#1066)
Changes introduced in caused backwards incompatibility issues with Java
8:

https://github.com/aws-observability/aws-otel-java-instrumentation/pull/1064

*Description of changes:*
Removed usage of List.of


By submitting this pull request, I confirm that my contribution is made
under the terms of the Apache 2.0 license.